--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Urban Template
-url: "https://teal-worm.cloudvent.net"
+title: DGC
+url: "https://dubaigoldcoin.github.io/"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
@@ -16,9 +16,9 @@ author:
 
 # Social details for the jekyll-seo-tag gem
 social:
-  name: Urban Template
+  name: DGC
   links:
-    - https://github.com/CloudCannon/urban-jekyll-template
+    - https://dubaigoldcoin.github.io
 
 timezone: Etc/UTC
 
